<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP30_AUTOSEQUENCE" Id="{1ec3b55c-8769-4ee0-8812-2eb37c9825e9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP30_AUTOSEQUENCE
VAR
	OP30_Oring_OK 	: BOOL;
	MOVER_OK		: BOOL;
	FIXTURE_LH		: INT;
	FIXTURE_RH 		: INT;
	del : ton;
	tmp :BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// AUTO MODE
IF (NOT OP30_AutoSelected OR  OP30_ErrorActive OR OP30_HomeRunning ) THEN
	OP30_AutoRunning:= FALSE;
	OP30_AutoSeq:= 10;
END_IF	

CASE OP30_AutoSeq OF
	    10: IF (OP30_AutoSelected) THEN		// Check Automode Selected
				OP30_AutoSeq:=20;
	        END_IF
		
	    20:IF ( NOT OP30_ErrorActive) THEN		//Check No error
		       OP30_AutoSeq:=30;
      	   END_IF
		   
      	30:IF (NOT OP30_HomeRunning) THEN		//Check No Homerunning
      		   OP30_AutoSeq :=40;
      	   END_IF
		   
        40:IF (OP30_Main.OP30_Modeselection_FB.TempHomeOK)THEN	//Check Machine in Home
      		   OP30_AutoSeq:= 50;
      	   END_IF
		   
      	50:IF ( NOT OP30_OperationCompleted) THEN		// Check Operation Completed Reset
      		   OP30_AutoSeq:=60;
      	   END_IF
		   
		60:IF  ( AUTO_RUNNING OR (NOT AUTO_RUNNING AND OP30_HMI_Cycle_Start )) THEN		//Machine Start in Fully Automatic or Press Cycle Start For Semi Automatic
		    OP30_GVL.OP30_HomeConditionOK:=TRUE;
	 			IF( OP30_Main.OP30_Modeselection_FB.HomeConditionOK AND OP30_AutoSelected) THEN
					OP30_GVL.OP30_AutoRunning:=TRUE;
					OP30_GVL.OP30_StepRunning:= FALSE;
				
				ELSIF (OP30_Main.OP30_Modeselection_FB.HomeConditionOK AND OP30_StepSelected) THEN
					OP30_GVL.OP30_AutoRunning:=FALSE;
					OP30_GVL.OP30_StepRunning:= TRUE;
				END_IF;
		  END_IF
		   IF ((OP30_AutoRunning OR OP30_StepRunning) AND OP30_StartEnable) THEN
				OP30_AutoSeq:= 70;
		   END_IF	
		   
		 70 : //MOVING HORIZONTAL SERVO TO PICK POSITION
			  IF (OP30_HORI_SERVO_ON_SFE_WRK OR OP30_HORI_SERVO_ON_HOME OR OP30_HORI_SERVO_ON_WRK_PLACE )AND OP30_HORI_SERVO_POS_DONE AND NOT SR30_HORI_servo_ctrl.ABSmove_Start THEN 
	           MOVER_OK := FALSE;
			   SR30_Hori_servo_ctrl.Position:=OP30_HORI_SERVO_PICK_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=80;
			   END_IF 			  
	          END_IF
			 
		 80 :  SR30_HORI_servo_ctrl.ABSmove_Start := TRUE;     //HORIZONTAL SERVO MOVING
		       IF OP30_HORI_SERVO_ON_WRK_PICK THEN
				   SR30_HORI_servo_ctrl.ABSmove_Start := FALSE;
				   OP30_AutoSeq:=82;
			   END_IF
		
	  	82 :  OP30_Gripper_LH_Close:=TRUE;  //CHECKING GRIPPER STATE BEFORE GRIPPING
			  OP30_Gripper_RH_Close:=TRUE;
			  IF NOT OP30_Gripper_LH_State AND NOT OP30_Gripper_RH_State THEN
				   OP30_AutoSeq:=85;
			  END_IF
			   
		85:	   // MOVING VERTICAL SERVO TO PICK POSITION
               IF  OP30_HORI_SERVO_ON_WRK_PICK AND (OP30_VERT_SERVO_ON_SFE_WRK OR OP30_VERT_SERVO_ON_HOME) AND OP30_VERT_SERVO_POS_DONE AND NOT SR30_VERT_servo_ctrl.ABSmove_Start THEN
				   SR30_Vert_servo_ctrl.Position:=OP30_VERT_SERVO_PICK_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=90;
			   END_IF 				   
			   END_IF
			   
			   
		90 :  IF OP30_pick_ready THEN  // WAITING FOR O-RING TO BE OK AND THEN MOVING THE VERTICAL SERVO
			 	SR30_VERT_servo_ctrl.ABSmove_Start := TRUE;
				OP30_AutoSeq:=100;
		       END_IF
			   
			   
	   100 : IF OP30_VERT_SERVO_ON_WRK_PICK AND NOT SR30_VERT_servo_ctrl.ABSmove_Start THEN
				   SR30_VERT_servo_ctrl.ABSmove_Start := FALSE;
				   SR30_Vert_servo_ctrl.Position:=OP30_VERT_SERVO_SFE_WRK_POS; // FEEDING SAFE-WORK POSITION TO VERTICAL SERVO
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=110;
			   END_IF 				   
			 END_IF	   
			 
      110:    //PICKING O-RING
    		   	OP30_Gripper_LH_Open:=TRUE;
    		   	OP30_Gripper_RH_Open:=TRUE;					
    		    OP30_AutoSeq:=120;
    		
      120: OP30_AutoSeq:=130;
    		   
      130: SR30_VERT_servo_ctrl.ABSmove_Start := TRUE;	   //MOVING VERTICL SERVO TO SAFE-WORK
            IF OP30_VERT_SERVO_ON_SFE_WRK  THEN
    	      SR30_VERT_servo_ctrl.ABSmove_Start := FALSE;
			  OP30_pick_done:=TRUE;
              OP30_AutoSeq:=140;   
    		END_IF
    		   
      140:  IF OP30_Gripper_LH_State AND OP30_Gripper_RH_State THEN   // CHECKING GRIPPER STATE BEFORE PLACING 
    		      OP30_AutoSeq:=150;
    		ELSE    
    			  OP30_AutoSeq:=220;
    	    END_IF
    	   
    		  
       150:  IF OP30_VERT_SERVO_ON_SFE_WRK  THEN // FEEDING PLACE POSITION TO HORIZONTAL SERVO
    		   SR30_Hori_servo_ctrl.Position:=OP30_HORI_SERVO_PLACE_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=160;
			   END_IF 				 
    		 END_IF
    		   
       160:  SR30_HORI_servo_ctrl.ABSmove_Start := TRUE;    // MOVING HORIZONTAL SERVO TO PLACE POSITION
    		   IF OP30_HORI_SERVO_ON_WRK_PLACE THEN
    			 SR30_HORI_servo_ctrl.ABSmove_Start := FALSE;
    			 OP30_AutoSeq:=170;
    		   END_IF
       
       170: //WAITING FOR MOVER TO BE OK 
    		IF OP30_HORI_SERVO_ON_WRK_PLACE AND NOT SR30_VERT_servo_ctrl.ABSmove_Start AND OP30_VERT_SERVO_ON_SFE_WRK AND MOVER_OK THEN
    	   		SR30_Vert_servo_ctrl.Position:=OP30_VERT_SERVO_PLACE_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=180;
			   END_IF 			
      		END_IF
    		
       180: SR30_VERT_servo_ctrl.ABSmove_Start := TRUE; //MOVING VERTICAL SERVO TO PLACE POSITION
    		IF OP30_VERT_SERVO_ON_WRK_PLACE THEN
    			SR30_VERT_servo_ctrl.ABSmove_Start := FALSE;
    			OP30_AutoSeq:=190;	
    		END_IF	
    
       190:	IF FIXTURE_LH =99 THEN //PLACING THE O-RING  && RESULT UPDATION
    			 OP30_Gripper_LH_Close:=TRUE; 
    		END_IF	 
    		IF FIXTURE_RH =99 THEN
    			 OP30_Gripper_RH_Close:=TRUE;
    		END_IF
    		  OP30_AutoSeq:=200;
    	
       200:  //MOVING BACK TO VERTICAL SERVO SAFE POSITION
    		 IF OP30_VERT_SERVO_ON_WRK_PLACE AND NOT SR30_VERT_servo_ctrl.ABSmove_Start THEN
    		   SR30_Vert_servo_ctrl.Position:=OP30_VERT_SERVO_SFE_WRK_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=210;
			   END_IF 			   
    		 END_IF 
    		 
       210:	 SR30_VERT_servo_ctrl.ABSmove_Start := TRUE;  //PROCEEDING FOR NEXT CYCLE          
              IF OP30_VERT_SERVO_ON_SFE_WRK  THEN
    			  SR30_VERT_servo_ctrl.ABSmove_Start := FALSE;			  
    			  IF OP30_Gripper_LH_State OR OP30_Gripper_RH_State THEN
    		  		OP30_AutoSeq:=220;
    			  ELSE  				
                  	OP30_AutoSeq:=70; 
    			  END_IF  			  
    		  END_IF
    		  
       220:  IF OP30_VERT_SERVO_ON_SFE_WRK AND NOT SR30_HORI_servo_ctrl.ABSmove_Start AND (OP30_HORI_SERVO_ON_WRK_PLACE OR OP30_HORI_SERVO_ON_WRK_Pick)  THEN
    		  SR30_Hori_servo_ctrl.Position:=OP30_HORI_SERVO_SFE_WRK_POS;
			   tmp:=TRUE;
			   IF del.Q THEN
              	 OP30_AutoSeq:=240;
			   END_IF 			  
    		 END_IF  
    	
       240: SR30_HORI_servo_ctrl.ABSmove_Start := TRUE;
            IF OP30_HORI_SERVO_ON_SFE_WRK THEN
    	  	   SR30_HORI_servo_ctrl.ABSmove_Start := FALSE;
      		   OP30_Gripper_RH_Close:=TRUE;	
    		   OP30_Gripper_LH_Close:=TRUE; 			   
      		 END_IF
    		 IF NOT OP30_Gripper_LH_State AND NOT OP30_Gripper_RH_State THEN
    		   OP30_AutoSeq:=70;
    		 END_IF

END_CASE



del(IN:=tmp,PT:=T#1S);
IF del.Q THEN
	tmp:=FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="OP30_AUTOSEQUENCE">
      <LineId Id="3" Count="190" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>